--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -329,8 +329,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -477,8 +478,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -621,8 +623,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -741,8 +744,9 @@ jobs:
           fi
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -879,8 +883,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1017,8 +1022,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1070,8 +1076,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Download image
@@ -1105,8 +1112,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Download image
@@ -1140,8 +1148,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Download image
@@ -1177,8 +1186,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Download image
@@ -1255,8 +1265,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1342,8 +1353,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1423,8 +1435,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1477,8 +1490,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Download image
@@ -1573,8 +1587,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1684,8 +1699,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -1859,8 +1875,9 @@ jobs:
           fi
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install submariner subctl
@@ -1958,8 +1975,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
@@ -2048,8 +2066,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
