--- a/charts/templates/ovn-CR.yaml
+++ b/charts/templates/ovn-CR.yaml
@@ -15,6 +15,8 @@ rules:
       - vpc-nat-gateways/status
       - subnets
       - subnets/status
+      - ippools
+      - ippools/status
       - ips
       - vips
       - vips/status
