--- a/.github/workflows/build-kube-ovn-test.yaml
+++ b/.github/workflows/build-kube-ovn-test.yaml
@@ -13,6 +13,7 @@ jobs:
           go-version-file: go.mod
           check-latest: true
           cache: false
+          platforms: arm64
 
       - name: Build
         run: make image-test
@@ -24,4 +25,4 @@ jobs:
           COMMIT: ${{ github.sha }}
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-          docker push kubeovn/test:$(cat VERSION)
+          docker push kubeovn/test:$(cat VERSION)-arm
