--- a/yamls/kube-ovn-dual-stack.yaml
+++ b/yamls/kube-ovn-dual-stack.yaml
@@ -289,7 +289,7 @@ spec:
           command:
             - /kube-ovn/kube-ovn-pinger
             - --external-address=114.114.114.114,2400:3200::1
-            - --external-dns=alauda.cn
+            - --external-dns=google.com.
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 0
