--- a/yamls/kube-ovn.yaml
+++ b/yamls/kube-ovn.yaml
@@ -312,7 +312,7 @@ spec:
           command:
             - /kube-ovn/kube-ovn-pinger
             - --external-address=114.114.114.114
-            - --external-dns=alauda.cn
+            - --external-dns=alauda.cn.
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 0
