--- a/yamls/kube-ovn-ipv6.yaml
+++ b/yamls/kube-ovn-ipv6.yaml
@@ -265,7 +265,7 @@ spec:
           command:
             - /kube-ovn/kube-ovn-pinger
             - --external-address=2400:3200::1
-            - --external-dns=alauda.cn
+            - --external-dns=google.com.
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 0
