--- a/.github/workflows/build-kube-ovn-test.yaml
+++ b/.github/workflows/build-kube-ovn-test.yaml
@@ -1,6 +1,9 @@
 name: Build Test
 on: workflow_dispatch
 
+env:
+  GO_VERSION: ''
+
 jobs:
   build:
     name: Build Test
@@ -10,6 +13,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: actions/setup-go@v4
         with:
+          go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
           check-latest: true
           cache: false
