--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,6 +18,9 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
+env:
+  GO_VERSION: ''
+
 jobs:
   analyze:
     name: Analyze
@@ -42,6 +45,7 @@ jobs:
 
     - uses: actions/setup-go@v4
       with:
+        go-version: ${{ env.GO_VERSION || '' }}
         go-version-file: go.mod
         check-latest: true
         cache: false
