--- a/.github/workflows/build-arm64-image.yaml
+++ b/.github/workflows/build-arm64-image.yaml
@@ -18,6 +18,9 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
+env:
+  GO_VERSION: '1.20.5'
+
 jobs:
   build:
     name: Build arm64
@@ -29,10 +32,12 @@ jobs:
         with:
           platforms: arm64
 
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
+          go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
