--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -22,6 +22,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  GO_VERSION: '1.20.5'
   GOSEC_VERSION: '2.15.0'
 
 jobs:
@@ -33,10 +34,12 @@ jobs:
       build-kube-ovn: ${{ steps.filter.outputs.windows-kube-ovn }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
+          go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Generate path filter
         env:
@@ -177,10 +180,12 @@ jobs:
     if: github.event_name == 'release' || github.event_name == 'workflow_dispatch' || needs.filter.outputs.build-kube-ovn == 'true'
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
+          go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: |
