--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,16 +12,21 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
+env:
+  GO_VERSION: ''
+
 jobs:
   golangci:
     name: lint
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
+          go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
