--- a/yamls/kube-ovn.yaml
+++ b/yamls/kube-ovn.yaml
@@ -202,6 +202,7 @@ spec:
             - --alsologtostderr=true
             - --log_file=/var/log/kube-ovn/kube-ovn-cni.log
             - --log_file_max_size=0
+            - --enable-tproxy=false
           securityContext:
             runAsUser: 0
             privileged: true
