--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -868,6 +868,9 @@ spec:
       - jsonPath: .status.type
         name: Type
         type: string
+      - jsonPath: .status.nat
+        name: Nat
+        type: string
       - jsonPath: .status.ready
         name: Ready
         type: boolean
@@ -879,6 +882,8 @@ spec:
               type: object
               properties:
                 type:
+                  type: string
+                nat:
                   type: string
                 ready:
                   type: boolean
