--- a/yamls/ovn-dpdk.yaml
+++ b/yamls/ovn-dpdk.yaml
@@ -206,7 +206,10 @@ spec:
         - name: ovn-central
           image: "kubeovn/kube-ovn:v1.10.0"
           imagePullPolicy: IfNotPresent
-          command: ["/kube-ovn/start-db.sh"]
+          command: 
+          - /kube-ovn/start-db.sh
+          - 180000
+          - 5
           securityContext:
             capabilities:
               add: ["SYS_NICE"]
