--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -95,7 +95,10 @@ spec:
         - name: ovn-central
           image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
-          command: ["/kube-ovn/start-db.sh"]
+          command: 
+          - /kube-ovn/start-db.sh
+          - 180000
+          - 5
           securityContext:
             capabilities:
               add: ["SYS_NICE"]
@@ -238,7 +241,10 @@ spec:
         - name: openvswitch
           image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
-          command: ["/kube-ovn/start-ovs.sh"]
+          command: 
+          - /kube-ovn/start-ovs.sh
+          - 10000 
+          - 180
           securityContext:
             runAsUser: 0
             privileged: true
