--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -62,6 +62,10 @@ func:
   ENABLE_BIND_LOCAL_IP: true
   U2O_INTERCONNECTION: false
   ENABLE_TPROXY: false
+  PROBE_INTERVAL: 180000
+  OVN_LEADER_PROBE_INTERVAL: 5
+  OVN_REMOTE_PROBE_INTERVAL: 10000
+  OVN_REMOTE_OPENFLOW_INTERVAL: 180
 
 ipv4:
   POD_CIDR: "10.16.0.0/16"
