--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -97,8 +97,6 @@ spec:
           imagePullPolicy: IfNotPresent
           command: 
           - /kube-ovn/start-db.sh
-          - "180000"
-          - "5"
           securityContext:
             capabilities:
               add: ["SYS_NICE"]
@@ -125,6 +123,10 @@ spec:
                   fieldPath: status.podIPs
             - name: ENABLE_BIND_LOCAL_IP
               value: "true"
+            - name: PROBE_INTERVAL
+              value: "180000"
+            - name: OVN_LEADER_PROBE_INTERVAL
+              value: "5"
           resources:
             requests:
               cpu: 300m
@@ -243,8 +245,6 @@ spec:
           imagePullPolicy: IfNotPresent
           command: 
           - /kube-ovn/start-ovs.sh
-          - "10000" 
-          - "180"
           securityContext:
             runAsUser: 0
             privileged: true
@@ -271,6 +271,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            - name: OVN_REMOTE_PROBE_INTERVAL
+              value: "10000" 
+            - name: OVN_REMOTE_OPENFLOW_INTERVAL
+              value: "180"
           volumeMounts:
             - mountPath: /var/run/netns
               name: host-ns
