--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -47,6 +47,10 @@ networking:
   ENABLE_ECMP: false
   ENABLE_METRICS: true
   NODE_LOCAL_DNS_IP: ""
+  PROBE_INTERVAL: 180000
+  OVN_LEADER_PROBE_INTERVAL: 5
+  OVN_REMOTE_PROBE_INTERVAL: 10000
+  OVN_REMOTE_OPENFLOW_INTERVAL: 180
 
 func:
   ENABLE_LB: true
